@@ -1,116 +1,0 @@
-<Type Name="IMContextInfo" FullName="Gtk.IMContextInfo">
-  <TypeSignature Language="C#" Value="public sealed struct IMContextInfo;" Maintainer="auto" />
-  <AssemblyInfo>
-    <AssemblyName>gtk-sharp</AssemblyName>
-    <AssemblyPublicKey>
-    </AssemblyPublicKey>
-    <AssemblyVersion>0.0.0.0</AssemblyVersion>
-    <AssemblyCulture>neutral</AssemblyCulture>
-    <Attributes />
-  </AssemblyInfo>
-  <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
-  <Docs>
-    <summary>Helper class for <see cref="T:Gtk.IMContext" />.</summary>
-    <remarks>TODO: Not used in Gtk#; should be removed?</remarks>
-  </Docs>
-  <Base>
-    <BaseTypeName>System.ValueType</BaseTypeName>
-  </Base>
-  <Interfaces />
-  <Attributes />
-  <Members>
-    <Member MemberName="Zero">
-      <MemberSignature Language="C#" Value="public static Gtk.IMContextInfo Zero;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>Gtk.IMContextInfo</ReturnType>
-      </ReturnValue>
-      <Parameters />
-      <Docs>
-        <summary>Do not use.</summary>
-        <remarks />
-      </Docs>
-    </Member>
-    <Member MemberName="New">
-      <MemberSignature Language="C#" Value="public static Gtk.IMContextInfo New (IntPtr raw);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>Gtk.IMContextInfo</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="raw" Type="System.IntPtr" />
-      </Parameters>
-      <Docs>
-        <summary>Public constructor for internal use only. Do not use.</summary>
-        <param name="raw">a <see cref="T:IntPtr" /></param>
-        <returns>a <see cref="T:Gtk.IMContextInfo" /></returns>
-        <remarks />
-      </Docs>
-    </Member>
-    <Member MemberName="ContextId">
-      <MemberSignature Language="C#" Value="public string ContextId;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>System.String</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>Do not use.</summary>
-        <remarks />
-      </Docs>
-    </Member>
-    <Member MemberName="ContextName">
-      <MemberSignature Language="C#" Value="public string ContextName;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>System.String</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>Do not use.</summary>
-        <remarks />
-      </Docs>
-    </Member>
-    <Member MemberName="Domain">
-      <MemberSignature Language="C#" Value="public string Domain;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>System.String</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>Do not use.</summary>
-        <remarks />
-      </Docs>
-    </Member>
-    <Member MemberName="DomainDirname">
-      <MemberSignature Language="C#" Value="public string DomainDirname;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>System.String</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>Do not use.</summary>
-        <remarks />
-      </Docs>
-    </Member>
-    <Member MemberName="DefaultLocales">
-      <MemberSignature Language="C#" Value="public string DefaultLocales;" />
-      <MemberType>Field</MemberType>
-      <ReturnValue>
-        <ReturnType>System.String</ReturnType>
-      </ReturnValue>
-      <Parameters>
-      </Parameters>
-      <Docs>
-        <summary>Do not use.</summary>
-        <remarks />
-      </Docs>
-    </Member>
-  </Members>
-</Type>
